# goose

./: pyproject.toml
libs/goose-instruct/: competions.py
libs/goose-threads/: thread.py
