[tool.poetry]
name = "goose"
version = "0.1.0"
description = "Library "
authors = ["andgate <the.andgate@gmail.com>"]
readme = "README.md"
packages = [
    { include = "goose", from = "libs" },
    { include = "goose-agents", from = "libs" },
    { include = "goose-instruct", from = "libs" },
    { include = "goose-threads", from = "libs" },
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "2.4.2"
openai = "1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
